<resources>
    <string name="app_name">BrushGo</string>
    <string name="BrushGo">BrushGo</string>
    <string name="password">密碼</string>
    <string name="chkContract">我已詳閱、了解並接受BrushGo的服務條款、隱私權與個人保護政策。</string>
    <string name="signin">登入使用Brush Go</string>
    <string name="signup">註冊</string>
    <string name="forget">忘記密碼?</string>
    <string name="open">開啟</string>
    <string name="close">關閉</string>
    <string name="threeminutes">三分鐘</string>
    <string name="fiveminutes">五分鐘</string>
    <string name="fourminutes">四分鐘</string>
    <string name="time">時間:</string>
    <string name="remider">提醒:</string>
    <string name="week">每一周</string>
    <string name="oneday">每一天</string>
    <string name="threedays">每三天</string>
    <string name="save">儲存</string>
    <string name="googlesigin">Google登入</string>
    <string name="clock">刷牙鬧鐘:</string>
    <string name="morning">AM</string>
    <string name="evening">PM</string>
    <string name="twominutes">兩分鐘</string>
    <string name="alarm_cancel">關閉提醒</string>
    <string name="ID">帳號</string>
</resources>
